# fujin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  PROPOSAL.md  README.md  Vagrantfile  compose.yml  fujin.toml  id_rsa  id_rsa.pub  justfile  pyproject.toml  ssh.py
.github/: copilot-instructions.md
.github/agents/: cloud.yml
.github/workflows/: publish.yml
docs/: conf.py  configuration.rst  index.rst  requirements.txt  secrets.rst  tutorial.rst
docs/commands/: deploy.rst  index.rst  server.rst
examples/django/bookstore/: fujin.toml  pyproject.toml  requirements.txt
examples/golang/pocketbase/: fujin.toml
src/fujin/: __init__.py  __main__.py  caddy.py  config.py  connection.py  hooks.py  host.py  pssh_connection.py  secrets.py  systemd.py  utils.py
src/fujin/commands/: __init__.py  _base.py  app.py  base.py  config.py  deploy.py  down.py  init.py  logs.py  printenv.py  proxy.py  prune.py  redeploy.py  rollback.py  (+3 more)
tests/: README.md  conftest.py  recorder.py  test_app.py  test_config.py  test_deploy.py  test_down.py  test_functional.py  test_prune.py  test_rollback.py
tests/integration/: conftest.py  test_full_deploy.py  test_mock_ssh.py
tests/recordings/: test_app_start_fallback_to_service_name.json  test_app_start_resolves_process_name.json  test_app_start_resolves_worker_replicas.json  test_deploy_binary_mode.json  test_deploy_pruning.json  test_deploy_python_rebuild_venv.json  test_deploy_python_reuse_venv.json  test_deploy_version_update.json
tests/unit/: test_base_command.py  test_commands.py  test_connection.py
(+26 files in other folders)
