[project]
name = "fujin-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tobi DEGNON", email = "tobidegnon@proton.me" } 
]
requires-python = ">=3.10"
dependencies = ["fabric", "rich", "tomlkit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

urls.Documentation = "https://github.com/falcopackages/fujin#readme"
urls.Issues = "https://github.com/falcopackages/fujin/issues"
urls.Source = "https://github.com/falcopackages/fujin"

[project.scripts]
fujin = "fujin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/fujin",
]
